--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -87,6 +87,10 @@ nav ul{
     margin: 0 auto;
 }
 
+section{
+    margin-top: 130px;
+}
+
 /* about section style */
 .about{
 margin-top: 130px;
@@ -97,8 +101,8 @@ text-align: center;
 }
 
 .section-title{
-
-margin-bottom: 30px;
+text-align: center;
+margin-bottom: 50px;
 font-weight: 700;
 font-size: 35px;
 }
@@ -123,4 +127,71 @@ margin-bottom: 30px;
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+/* What I do Style */
+.what-i-do{
+    margin-top: 130px;
+}
+
+.skills-container{
+   display: flex; 
+   gap: 24px; 
+   padding-top: 50px;
+}
+
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+    
+}
+
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    
+    
+   
+}
+
+.skill-description{
+    color: #757575;
+}
+
+/* resume styles */
+
+
+.resume-content{
+    display: flex;
+    gap: 24px;
+    
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .resume-title{
+    font-size: 25px;
+    line-height: 34px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .resume-sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+resume .resume-description{
+    color: #757575;
+
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
