--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -195,3 +195,30 @@ resume .resume-description{
     margin-top: 50px;
     text-align: center;
 }
+
+/* contact */
+.contact .section-title{
+    text-align: left;
+   
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact input[type="text"],input[type="email"],textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding-left: 30px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+
+}
+
+.contact a{
+    text-decoration: none;
+    padding-left: 5px;
+}
